py_jsのテーマ切り替え機能の追加とコードの色合いの調整

--- a/markdown/py_js_src/package.json
+++ b/markdown/py_js_src/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "tsc src/questionnaire.ts --outDir tmp&&ts-node src/compile.ts"
+    "build": "tsc&&ts-node src/node/compile.ts"
   },
   "keywords": [],
   "license": "",
