--- a/markdown/py_js_src/package.json
+++ b/markdown/py_js_src/package.json
@@ -11,12 +11,13 @@
   "devDependencies": {
     "@types/marked": "0.6.5",
     "@types/node": "12.0.0",
+    "@types/sass": "^1.16.0",
+    "sass": "^1.22.4",
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
     "typescript": "3.4.5"
   },
   "dependencies": {
-    "github-markdown-css": "3.0.1",
     "marked": "0.6.2"
   }
 }
